# auralis

./: .gitignore  DEMO.md  PITCH.md  README.md  STATUS.md  VOICEOVER.md  deploy.local.env  deploy.railway.env
agents/simulation/: .env.example  .gitignore  README.md  __init__.py  ollama_client.py  prompts.py  pyproject.toml  requester_agent.py  requirements.txt  reviewer_agent.py  run_simulation.py  schemas.py
companion/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
companion/src/: api.ts  check-block.ts  check-blocknum.ts  check-mainnet.ts  check-multisig.ts  check-payout.ts  index.ts  multisig.ts  types.ts  verify.ts
contracts/: .gitignore  README.md  rust-toolchain.toml
contracts/agent_registry/: Cargo.toml  lib.rs
contracts/arisan_group/: Cargo.toml  lib.rs
contracts/badge_nft/: Cargo.toml  lib.rs
contracts/group_registry/: Cargo.toml  lib.rs
contracts/reputation_registry/: Cargo.toml  lib.rs
contracts/treasury/: Cargo.toml  lib.rs
contracts/voting_engine/: Cargo.toml  lib.rs
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/app/sign-in/: layout.tsx  page.tsx
frontend/components/: footer.tsx  navbar.tsx
frontend/components/app-shell/: app-shell.tsx  sidebar.tsx  topbar.tsx
frontend/lib/: content.ts  mock-ai.ts  profiles.ts
node/: Dockerfile  README.md  entrypoint.sh  railway.json
scripts/: README.md  check-prereqs.sh  deploy-railway.sh  deploy.sh  start.sh  stop.sh  test-flow.sh
(+80 files in other folders)
