[project]
name = "auralis-simulation"
version = "0.1.0"
description = "Auralis off-chain LLM simulation — Requester + Reviewer agents (Ollama-based, mirrors frontend pattern)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
